# mcp_v2

./: .gitignore  README.md  pyproject.toml  rag_design_v2.md  requirements.md  requirements.txt  spec_bridge.md  spec_manuals.md  spec_tooling.md  spec_v2.md  spec_vault.md
docs/: README.md  rag_design_v2.md  requirements.md  spec_bridge.md  spec_manuals.md  spec_tooling.md  spec_v2.md  spec_vault.md
evals/: manual_find_gold.jsonl  manual_find_lexical_gap.jsonl  manual_find_sonylife_gold.jsonl
manuals/No1/: phase0_input.json  route_discharge_input.json  route_surgery_input.json
manuals/No2input/: 00_特約_min.json  03_01a_factcheck_min.json  04_01a_final_min.json  09_M05_併発判定_min.json  10_M06_通算_災害_min.json  11_M07_通算_疾病31日特別_min.json  12_M08_手術判定_min.json
manuals/No3input/: 00_特約_min.json  04_01a_final_min.json  06_M02_部位不担保_min.json  08_M04_入院初期給付特約_min.json  14_M10_特別取扱い比較_min.json
manuals/No4input/: 00_特約_min.json  03_01a_factcheck_min.json  04_01a_final_min.json  06_M02_部位不担保_min.json  07_M03_災害入院給付金_min.json  09_M05_併発判定_min.json  10_M06_通算_災害_min.json  11_M07_通算_疾病31日特別_min.json
manuals/No5input/: 00_特約_min.json  01_00_router_min.json  03_01a_factcheck_min.json  04_01a_final_min.json  05_M01_がん群判定_min.json  08_M04_入院初期給付特約_min.json  09_M05_併発判定_min.json  12_M08_手術判定_min.json
manuals/No6input/: 00_特約_min.json  01_00_router_min.json  03_01a_factcheck_min.json  05_M01_がん群判定_min.json  06_M02_部位不担保_min.json  07_M03_災害入院給付金_min.json  08_M04_入院初期給付特約_min.json  12_M08_手術判定_min.json
scripts/: eval_manual_find.py
tests/: conftest.py
vault/: README.md
(+209 files in other folders)
